--- a/package.json
+++ b/package.json
@@ -4,29 +4,31 @@
   "private": true,
   "homepage": "",
   "dependencies": {
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.0.0",
-    "@testing-library/user-event": "13.2.1",
-    "@types/redux": "^3.6.0",
-    "antd": "4.18.7",
-    "axios": "0.26.0",
-    "classnames": "2.3.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/redux": "^3.6.31",
+    "antd": "5.3.0",
+    "axios": "1.3.4",
+    "classnames": "2.3.2",
     "formik": "2.2.9",
-    "gh-pages": "3.2.3",
-    "jest": "27.5.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "^8.0.4",
+    "gh-pages": "5.0.0",
+    "jest": "29.5.0",
+    "npm-check-updates": "^16.7.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6",
-    "react-scripts": "5.0.0",
-    "react-test-renderer": "17.0.2",
-    "redux": "^4.2.0",
-    "redux-form": "8.3.8",
-    "redux-thunk": "2.4.1",
-    "reselect": "4.1.5",
-    "typescript": "4.4.2",
-    "uuid": "^8.3.2",
-    "web-vitals": "2.1.0"
+    "react-scripts": "5.0.1",
+    "react-test-renderer": "18.2.0",
+    "redux": "^4.2.1",
+    "redux-form": "8.3.9",
+    "redux-thunk": "2.4.2",
+    "reselect": "4.1.7",
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0",
+    "web-vitals": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,14 +57,14 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "16.7.13",
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
-    "@types/react-redux": "^7.1.24",
+    "@types/node": "18.15.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-test-renderer": "17.0.1",
-    "@types/redux-form": "8.3.3",
-    "@types/uuid": "^8.3.4",
+    "@types/react-test-renderer": "18.0.0",
+    "@types/redux-form": "8.3.5",
+    "@types/uuid": "^9.0.1",
     "prettier": "2.8.4"
   }
 }
