--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-test-renderer": "18.2.0",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-form": "8.3.9",
     "redux-thunk": "2.4.2",
     "reselect": "4.1.7",
