--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"redux-devtools-extension": "^2.13.9",
 		"redux-form": "8.3.9",
 		"redux-thunk": "2.4.2",
-		"reselect": "4.1.7",
+		"reselect": "^4.1.8",
 		"typescript": "4.9.5",
 		"uuid": "^9.0.0",
 		"web-vitals": "3.3.0"
